# flake-templates

./: .gitignore  LICENSE  README.md  flake.nix  hproject.cabal
app/: Main.hs
haskell/: cabal.project  flake.nix  hproject.cabal
haskell-app/: CHANGELOG.md  flake.nix  hproject.cabal
haskell-nix/: flake.nix
haskell-nix/app/: Main.hs
haskell-nix/src/: Library.hs
haskell-simple/: LICENSE  flake.nix  hproject.cabal
haskell/exe/: Main.hs
haskell/src/: Library.hs
rust-bin/: Cargo.toml  flake.nix
rust-lib/: Cargo.toml  flake.nix
src/: Library.hs
