cabal-version:      3.0
name:               hproject
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Patsakula Nikita
maintainer:         nikita.patsakula@gmail.com
extra-source-files: CHANGELOG.md

flag Dump
  description: Enables Core IR dump.
  manual:      True
  default:     False

flag WStrict
  description: Enables -Werror and Wunused-packages.
  manual:      True
  default:     False

common ghc-common-options
  ghc-options:
    -- Warnings:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wno-unused-do-bind
    -- Optimizations:
    -fhide-source-paths -fshow-hole-constraints
    -flate-specialise -fexpose-all-unfoldings -flate-dmd-anal
    -fstatic-argument-transformation 
    -- Linker flags: 
    "-pgmP clang" "-pgmc clang"
    "-pgma clang" "-pgml clang" -optl-fuse-ld=lld

  ld-options: -fuse-ld=lld

  if flag(dump)
    ghc-options: -ddump-simpl

  if flag(wstrict)
    ghc-options: -Werror -Wunused-packages

  default-extensions:
    DeriveGeneric
    OverloadedStrings

  build-depends:      base >=4.14 && <=5.0
  default-language:   Haskell2010

library
  import:          ghc-common-options
  exposed-modules: Library
  hs-source-dirs:  src

executable hproject
  import:         ghc-common-options
  main-is:        Main.hs
  build-depends:  hproject
  hs-source-dirs: app
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=--nonmoving-gc
    -with-rtsopts=-A64m -with-rtsopts=-AL128m

test-suite hproject-test
  import:         ghc-common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        MyLibTest.hs
  build-depends:  QuickCheck ^>=2.14
