cabal-version:      3.0
name:               hproject
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Patsakula Nikita
maintainer:         nikita.patsakula@gmail.com
extra-source-files: CHANGELOG.md

flag Dump
  description: Enables Core IR dump.
  manual:      True
  default:     False

flag WStrict
  description: Enables -Werror and Wunused-packages.
  manual:      True
  default:     False

common ghc-common-options
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wnoncanonical-monad-instances
               -Wmissing-export-lists
               -Wpartial-fields
               -Wmissing-deriving-strategies
               -fhide-source-paths
               -fshow-hole-constraints
               -flate-specialise
               -fexpose-all-unfoldings
               -flate-dmd-anal
               -fstatic-argument-transformation
               -fwrite-ide-info
               -hiedir=.hie

  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
                 -Wunicode-bidirectional-format-characters
                 -Werror=unicode-bidirectional-format-characters

  if impl(ghc >= 9.2)
    ghc-options:  -Wredundant-bang-patterns
                  -Woperator-whitespace
                  -Wimplicit-lift

  if impl(ghc >= 9.4)
    ghc-options:  -Wredundant-strictness-flags

  if flag(dump)
    ghc-options: -ddump-simpl

  if flag(wstrict)
    ghc-options: -Werror -Wunused-packages

  default-extensions:
    OverloadedStrings

  build-depends:
    , base    >=4  && <=5

  default-language: GHC2021

library
  import:          ghc-common-options
  exposed-modules: Library
  hs-source-dirs:  src
  build-depends:
     lens, text, vector, containers, bytestring, aeson

executable hproject
  import:         ghc-common-options
  main-is:        Main.hs
  build-depends:
     , hproject
     , pretty-simple

  hs-source-dirs: exe
  ghc-options:
    -O2 -threaded
    -rtsopts
    -with-rtsopts=-N
    -with-rtsopts=--nonmoving-gc
    -with-rtsopts=-A64m
    -with-rtsopts=-AL128m

test-suite hproject-test
  import:         ghc-common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        MyLibTest.hs
  build-depends:  QuickCheck ^>=2.14